--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,12 +20,12 @@
 }
 
 .logo img {
-  width: 70px;
-  padding: 10px 10px 10px 30px;
+  width: 55px;
+  padding: 5px 5px 0px 25px;
 }
 
 .menu ul {
-  padding: 30px 30px 10px 10px;
+  padding: 15px 30px;
 }
 
 .menu ul li {
@@ -44,7 +44,7 @@
 
 .menu span i {
   font-size: 30px;
-  padding: 30px;
+  padding: 15px 30px 15px 15px;
 }
 
 .menu span i:hover {
@@ -71,18 +71,18 @@
   display: grid;
   -ms-grid-columns: auto auto;
       grid-template-columns: auto auto;
-  grid-column-gap: 50px;
+  grid-column-gap: 40px;
 }
 
 .sectionHTML {
   border: 1px solid #000000;
-  padding: 20px;
-  margin: 4px;
+  padding: 15px;
+  margin: 3px;
 }
 
 .marco1 {
   border: 1px solid lightgray;
-  padding: 20px;
+  padding: 10px;
   margin: 10px;
 }
 
@@ -106,14 +106,119 @@
 
 .Cursos {
   border: 1px solid #000000;
-  padding: 20px;
-  margin: 4px;
+  padding: 15px;
+  margin: 3px;
 }
 
 .Cursos div div img {
   width: 30%;
   border-radius: 150px;
   border: 1px solid #000000;
+}
+
+@media (min-width: 150px) and (max-width: 767.98px) {
+  .main {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+  }
+}
+
+.Cursos div div {
+  text-align: center;
+}
+
+.Cursos div div h5 {
+  padding: 10px;
+  font-size: 20px;
+}
+
+.Cursos div div ul li {
+  display: inline-block;
+  padding: 3px;
+  font-size: 22px;
+}
+
+.Cursos div button {
+  width: 100%;
+  background-color: #494949;
+  color: #FFFFFF;
+  font-size: 20px;
+}
+
+.Cursos div p {
+  padding: 10px;
+}
+
+.Cursos div ul {
+  padding: 20px 30px 30px 30px;
+}
+
+.sectionHTML div ul li {
+  display: inline-block;
+}
+
+.header {
+  width: 60%;
+  margin: auto;
+}
+
+@media (min-width: 150px) and (max-width: 800.98px) {
+  .header {
+    width: 100%;
+  }
+}
+
+.footer {
+  margin-top: 20px;
+  width: 100%;
+  height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #000000;
+  color: #FFFFFF;
+}
+
+.footer p {
+  padding: 50px 0px 0px 200px;
+}
+
+.footer ul {
+  padding: 30px 180px 0px 0px;
+}
+
+.footer ul li {
+  display: inline-block;
+  padding: 20px;
+}
+
+.legal ul li a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+@media (min-width: 150px) and (max-width: 800.98px) {
+  .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 250px;
+    text-align: auto;
+  }
+  .footer p {
+    padding: 0;
+    text-align: center;
+    padding-top: 60px;
+  }
+  .footer ul {
+    padding: 0;
+    text-align: center;
+    padding-bottom: 40px;
+  }
 }
 
 .web__svg {
@@ -199,120 +304,14 @@
   }
 }
 
-@media (min-width: 150px) and (max-width: 767.98px) {
-  .main {
-    -ms-grid-columns: auto;
-        grid-template-columns: auto;
-  }
-}
-
-.Cursos div div {
-  text-align: center;
-}
-
-.Cursos div div h5 {
-  padding: 10px;
-  font-size: 20px;
-}
-
-.Cursos div div ul li {
-  display: inline-block;
-  padding: 3px;
-  font-size: 22px;
-}
-
-.Cursos div button {
-  width: 100%;
-  background-color: #060606;
-  color: #FFFFFF;
-  font-size: 26px;
-}
-
-.Cursos div p {
-  padding: 10px;
-}
-
-.Cursos div ul {
-  padding: 30px;
-}
-
-.sectionHTML div ul li {
-  display: inline-block;
-  padding: 3px;
-}
-
-.header {
-  width: 60%;
-  margin: auto;
-}
-
-@media (min-width: 150px) and (max-width: 800.98px) {
-  .header {
-    width: 100%;
-  }
-}
-
-.footer {
-  margin-top: 10px;
-  width: 100%;
-  height: 80px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: #000000;
-  color: #FFFFFF;
-}
-
-.footer p {
-  padding: 30px 0px 0px 180px;
-}
-
-.footer ul {
-  padding: 26px 180px 0px 0px;
-}
-
-.footer ul li {
-  display: inline-block;
-  padding: 4px;
-}
-
 .footer__buttom {
   background-color: orange;
-  padding: 2px;
+  padding: 3px;
   border: orange;
-  margin-left: 1.5px;
+  margin-left: 2px;
 }
 
 .footer__buttom:hover {
   background-color: #d5ec4d;
-}
-
-.legal ul li a {
-  text-decoration: none;
-  color: #FFFFFF;
-}
-
-@media (min-width: 150px) and (max-width: 800.98px) {
-  .footer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: 200px;
-    text-align: auto;
-  }
-  .footer p {
-    padding: 0;
-    text-align: center;
-    padding-top: 40px;
-  }
-  .footer ul {
-    padding: 0;
-    text-align: center;
-    padding-bottom: 40px;
-  }
 }
 /*# sourceMappingURL=main.css.map */
