--- a/assets/css/sass/layout/_navigation.scss
+++ b/assets/css/sass/layout/_navigation.scss
@@ -6,11 +6,11 @@
     color: #FFFFFF;
   }
   .logo img {
-    width: 70px;
-    padding: 10px 10px 10px 30px;
+    width: 55px;
+    padding: 5px 5px 0px 25px;
   }
   .menu ul {
-    padding: 30px 30px 10px 10px;
+    padding: 15px 30px;
   }
   .menu ul li {
     display: inline-block;
@@ -27,7 +27,7 @@
   
   .menu span i {
     font-size: 30px;
-    padding: 30px;
+    padding:  15px 30px 15px 15px;
   }
   .menu span i:hover {
     color: orange;
